--- a/app.wxss
+++ b/app.wxss
@@ -1,5 +1,5 @@
 /**app.wxss**/
-
+@import "/wxParse/wxParse.wxss";
 /* @import "/style/layout.wxss"; */
 .container {
     font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
