--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -199,20 +199,16 @@ swiper-item image {
     width: 100%;
     height: 100%;
 }
-.banner_shade{
+
+.banner_shade {
     position: absolute;
     width: 100%;
     height: 100%;
     bottom: 0;
     left: 0;
-    background: linear-gradient(
-      to bottom,
-      RGBA(0, 0, 0, 0),
-      RGBA(0, 0, 0, .1),
-      RGBA(0, 0, 0, 0.3),
-      RGBA(0, 0, 0, 0.7)
-    );
+    background: linear-gradient( to bottom, RGBA(0, 0, 0, 0), RGBA(0, 0, 0, .1), RGBA(0, 0, 0, 0.3), RGBA(0, 0, 0, 0.7));
 }
+
 .banner_h1 {
     position: absolute;
     font-size: 36rpx;
@@ -233,6 +229,7 @@ swiper-item image {
     margin-top: 20rpx;
     background: #fff;
     padding: 0 24rpx;
+    /* padding: 17rpx 24rpx 29rpx; */
 }
 
 .scroll_view {
@@ -260,6 +257,17 @@ swiper-item image {
 .section_logo .section_img {
     width: 140rpx;
     height: 107rpx;
+    position: relative;
+    overflow: hidden;
+    /* height: 77rpx; */
+}
+
+.section_img image {
+    position: absolute;
+    top: -1px;
+    left: -1px;
+    width: calc(100% + 2px);
+    height: calc(100% + 2px);
 }
 
 .section_logo .section_h1 {
@@ -331,7 +339,8 @@ swiper-item image {
     color: rgba(51, 51, 51, 1);
     border-top: 1px solid #eee;
 }
-.go_top text{
+
+.go_top text {
     width: 50rpx;
     height: 50rpx;
     background-color: rgba(0, 0, 0, .5);
@@ -343,6 +352,7 @@ swiper-item image {
     right: 40rpx;
     bottom: 55rpx;
 }
-.go_top text{
+
+.go_top text {
     color: #fff;
 }
