--- a/pages/shop/order/order.wxss
+++ b/pages/shop/order/order.wxss
@@ -213,8 +213,16 @@ view {
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
 }
-
+.lxkf button {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+}
 .money .lxkf .kf_img {
   width: 26rpx;
   height: 25rpx;
