--- a/app.wxss
+++ b/app.wxss
@@ -42,11 +42,12 @@ image {
    background: linear-gradient(to right, RGBA(227, 211, 175, 1), RGBA(194, 179, 135, 1)) !important;
 }
 .icon{
-    width: 22px;
-    height: 22px;
+    width: 18px;
+    height: 18px;
     border: 1px solid RGBA(194, 179, 135, 1);
     border-radius: 50%;
-    box-sizing: border-box;
+    overflow: hidden;
+    box-sizing: content-box;
 }
 
 /* 字体图标 */
