--- a/app.wxss
+++ b/app.wxss
@@ -42,12 +42,15 @@ image {
    background: linear-gradient(to right, RGBA(227, 211, 175, 1), RGBA(194, 179, 135, 1)) !important;
 }
 .icon{
-    width: 18px;
-    height: 18px;
+    width:20px;
+    height: 20px;
     border: 1px solid RGBA(194, 179, 135, 1);
     border-radius: 50%;
     overflow: hidden;
-    box-sizing: content-box;
+    box-sizing:border-box;
+}
+.icon.none{
+    border:none;
 }
 
 /* 字体图标 */
