--- a/pages/shop/order/orderList.wxss
+++ b/pages/shop/order/orderList.wxss
@@ -194,7 +194,7 @@ page{
   height: 100%;
   background:rgba(0, 0, 0, .5)
 }
-.pswbox view {
+.section, .section view {
   box-sizing: border-box;
 }
 .section{
@@ -203,10 +203,11 @@ page{
   width: 600rpx;
   height: 400rpx;
   background-color: #fff;
-  position: absolute;
+  position: fixed;
   top: 133rpx;
   left: 75rpx;
   border-radius:15rpx;
+  z-index: 999;
 }
 .section .title{
   text-align: center;
