--- a/pages/shop/order/express/express.wxss
+++ b/pages/shop/order/express/express.wxss
@@ -31,6 +31,38 @@ page{
   left: -36rpx;
   transform: translate(-50%,-50%);
 }
+.xian::before{
+  position: absolute;
+  content: '';
+  width: 30rpx;
+  height: 30rpx;
+  background:rgba(173, 155, 106, 1);
+  border: 2px solid rgba(173, 155, 106, 1);
+  border-radius: 50%;
+  top: 0;
+  left: 0;
+  transform: translate(-50%,0);
+}
+.xian::after{
+  position: absolute;
+  content: '';
+  width: 30rpx;
+  height: 30rpx;
+  background:rgba(173, 155, 106, 1);
+  border: 2px solid rgba(173, 155, 106, 1);
+  border-radius: 50%;
+  bottom: 0;
+  left: 0;
+  transform: translate(-50%,0);
+}
+.kd_list .list:nth-of-type(1)::before{
+  opacity: 0;
+  display: none;
+}
+.kd_list .list:nth-last-of-type(2)::before{
+  opacity: 0;
+  display: none;
+}
 .one::before {
   top:0%;
   left: -36rpx;
