--- a/pages/index/result/result.wxss
+++ b/pages/index/result/result.wxss
@@ -102,6 +102,7 @@
   padding-left: 20rpx;
   padding-bottom: 110rpx;
   position: relative;
+  overflow-y: scroll;
 }
 
 .h1 {
@@ -172,7 +173,7 @@
 .btn {
   width: 600rpx;
   height: 70rpx;
-  position: absolute;
+  position: fixed;
   border-radius: 35px;
   display: flex;
   justify-content: center;
@@ -180,8 +181,10 @@
   text-align: center;
   overflow: hidden;
   bottom: 20rpx;
-  left:50%;
-  transform: translateX(-50%);
+  /* left:50%; */
+  right:35rpx;
+  /* transform: translateX(-50%); */
+  background-color: #fff;
 }
 
 .btn view {
