--- a/pages/shop/order/info/info.wxss
+++ b/pages/shop/order/info/info.wxss
@@ -1,16 +1,20 @@
 view{
   box-sizing: border-box;
 }
-
-.tk_box{
+page{
   background-color: #fff;
 }
-.tk_box .kefu_box {
-  padding-top: 60rpx;
-  padding-bottom: 173rpx;
+.kefu_box {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 50rpx;
+  padding-top: 44rpx;
+  height: auto;
+  border: none!important;
+  margin-top: 40rpx;
 }
 
- .lxkf {
+.lxkf {
   width: 240rpx;
   height: 60rpx;
   border-radius: 10px;
@@ -18,10 +22,17 @@ view{
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 0 auto;
+  position: relative;
 }
-
- .lxkf .kf_img {
+.lxkf button {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+}
+.lxkf .kf_img {
   width: 26rpx;
   height: 25rpx;
 }
@@ -33,8 +44,8 @@ view{
   color: rgba(102, 102, 102, 1);
   line-height: 40rpx;
 }
-
 .submit_btn {
+  margin: 0 60rpx;
   margin-top: 55rpx;
   height: 70rpx;
   border-radius: 35px;
