fix:支付密码优化跳转

--- a/pages/my/set/password.wxml
+++ b/pages/my/set/password.wxml
@@ -7,7 +7,9 @@
 <form bindsubmit="toGo" class="form">
   <view class="mobile">
     <text>验证码:</text>
-    <input type="text" name='real_name' placeholder="请输入6位验证码" />
+    <input type="text" name='captcha' placeholder="请输入6位验证码" />
+    <input type="text" name='mobile' value="{{mobile}}" style="display:none"/>
+    <input type="text" name='event' value="paypwd" style="display:none"/>
   </view>
   
 <button  class="jinse btn" form-type="submit">下一步</button>
