--- a/pages/shop/pay/index.wxml
+++ b/pages/shop/pay/index.wxml
@@ -3,7 +3,7 @@
     <icon type="success" size="70" />
   </view>
   <view class="title">
-      支付完成
+      {{type == 1? '评价完成' :'支付完成'}}
   </view>
   <view class="jinse btn" bindtap="order" data-id="{{order_id}}"> 查看订单 </view>
   <view class="jinse btn" bindtap="home"> 返回首页 </view>
