--- a/pages/my/set/password.wxml
+++ b/pages/my/set/password.wxml
@@ -7,7 +7,7 @@
 <form bindsubmit="toGo" class="form">
   <view class="mobile">
     <text>验证码:</text>
-    <input type="text" name='captcha' placeholder="请输入6位验证码" />
+    <input type="text" name='captcha' placeholder="请输入验证码" />
     <input type="text" name='mobile' value="{{mobile}}" style="display:none"/>
     <input type="text" name='event' value="paypwd" style="display:none"/>
   </view>
