--- a/pages/shop/order/orderList.wxml
+++ b/pages/shop/order/orderList.wxml
@@ -109,7 +109,7 @@
       请输入支付密码
     </view>
     <input password type="number" confirm-type="done" maxlength="{{6}}" bindconfirm="submit" />
-    <view class="no_psw">
+    <view class="no_psw" bindtap="wjmm">
       忘记密码?
     </view>
   </view>
