fix:修复设置密码后跳转

--- a/pages/my/set/password.wxml
+++ b/pages/my/set/password.wxml
@@ -2,7 +2,7 @@
 <view class="title">请验证您的手机号，以便后续操作</view>
 <view class="mobile">
   <view class="phone">手机号:{{mobile}}</view>
-  <view class="jinse code" bindtap="getCode">获取验证码</view>
+  <view class="jinse code" bindtap="getCode">{{isCode?'已发送':'获取验证码'}}</view>
 </view>
 <form bindsubmit="toGo" class="form">
   <view class="mobile">
