--- a/pages/index/result/result.wxml
+++ b/pages/index/result/result.wxml
@@ -36,7 +36,7 @@
       筛选
     </view>
   </view>
-  <template is="goodsList" data="{{...objs}}"></template>
+  <template is="goodsList" data="{{goodsList}}"></template>
 </view>
 
 <view class="filtrate_list" animation="{{animation}}">
