--- a/pages/my/index.wxml
+++ b/pages/my/index.wxml
@@ -23,7 +23,7 @@
   <view class="apply" bindtap="todind">
     <view class="apply_box" data-url='/pages/my/indent/indent?status=0' bindtap="toPage">
       <view class="apply_bac">
-        <view class="hint">{{orderInfo.wait_paid}}</view>
+        <view class="hint" wx:if="{{orderInfo.wait_paid!=0}}">{{orderInfo.wait_paid}}</view>
         <image src="/images/my/geren_daifukuan@3x.png" />
       </view>
       <view class="apply_text">
@@ -32,7 +32,7 @@
     </view>
     <view class="apply_box" data-url='/pages/my/indent/indent?status=10' bindtap="toPage">
       <view class="apply_bac">
-        <view class="hint">{{orderInfo.wait_send}}</view>
+        <view class="hint" wx:if="{{orderInfo.wait_send!=0}}">{{orderInfo.wait_send}}</view>
         <image src="/images/my/geren_daifahuo@3x.png" />
       </view>
       <view class="apply_text">
@@ -41,7 +41,7 @@
     </view>
     <view class="apply_box" data-url='/pages/my/indent/indent?status=20' bindtap="toPage">
       <view class="apply_bac">
-        <view class="hint">{{orderInfo.wait_received}}</view>
+        <view class="hint" wx:if="{{orderInfo.wait_received!=0}}">{{orderInfo.wait_received}}</view>
         <image src="/images/my/geren_daishouhuo@3x.png" />
       </view>
       <view class="apply_text">
