--- a/pages/my/wallet/wallet.wxml
+++ b/pages/my/wallet/wallet.wxml
@@ -24,13 +24,19 @@
   </view>
   <view class="tab_body">
     <view class="body_info" wx:for="{{list}}" wx:key="index">
-     <view class="info_l">
-       <view>{{item.item.name}}<text wx:if="{{item.order_no}}">(订单号：{{item.order_no}})</text></view>
-       <text>{{item.createtime}}</text>
-     </view>
-     <view class="info_r">
-       ￥{{item.type==1?'-':''}}{{item.price}}
-     </view>
+    <view class="info_l">
+      <view wx:if="{{item.order_no}}">
+        <text class="order_no">{{item.name}} </text>
+        <text class='order'>(订单号：{{item.order_no}})</text> 
+      </view>
+      <view wx:else>
+        <view class="name">{{item.name}}</view>
+      </view>
+      <view class="item">{{item.createtime}}</view>
+    </view>
+    <view class="info_r {{isTab==1?'action':''}}" >
+      ￥{{item.price}}
+    </view>
     </view>
   </view>
 </view>
