--- a/pages/my/wallet/wallet.wxss
+++ b/pages/my/wallet/wallet.wxss
@@ -125,16 +125,19 @@ view {
   line-height: 40rpx;
 }
 
-.info_l>view {
-  font-size: 32rpx;
-  font-family: PingFangSC-Medium;
-  color: rgba(51, 51, 51, 1);
-  line-height: 40rpx;
+.info_r.action {
+  color: #FF8D6C;
 }
 
-.info_l>view text {
+.info_l .item {
+  margin-top: 10rpx;
+  color:#666;
+  font-size: 26rpx;
+}
+
+.order {
   font-size: 24rpx;
-  color: rgba(102, 102, 102, 1);
+  color: #666;
 }
 
 .info_l>text {
@@ -143,4 +146,12 @@ view {
   font-family: PingFangSC-Regular;
   color: rgba(102, 102, 102, 1);
   line-height: 40rpx;
+}
+
+.name,
+.order_no {
+  font-size: 32rpx !important;
+  font-family: PingFangSC-Medium;
+  font-weight: 600;
+  color: rgba(51, 51, 51, 1) !important;
 }
