--- a/components/goodsList/list.wxml
+++ b/components/goodsList/list.wxml
@@ -15,5 +15,8 @@
         [{{item.quality_name}}]{{item.goods_title}}
       </view>
     </view>
+    <view class="none" wx:if="{{goodsList.length==0 || !goodsList}}">
+      暂无数据
+    </view>
   </view>
 </template>
