--- a/pages/shop/goods/goods.wxml
+++ b/pages/shop/goods/goods.wxml
@@ -20,7 +20,7 @@
     <view class="title_h1">
       <text class="money"><text>￥</text>{{objs.price}}</text>
       <text class="zk" wx:if="{{objs.original_cost!=0}}">¥{{objs.original_cost}}</text>
-      <text class="jj">{{objs.quality_name}}</text>
+      <text class="jj" bindtap="csjs">{{objs.quality_name}}</text>
       <text class="fq" wx:if="{{objs.is_credit==1}}">分期</text>
 
     </view>
@@ -80,3 +80,8 @@
 </view>
 
 
+  <view wx:if="{{cs_show}}" class="tccs" bindtap="csjsEnd">
+    <view class="csjs">
+      <template is="wxParse"  data="{{wxParseData:cs_data.nodes}}"/>
+    </view>
+  </view>
