--- a/pages/shop/goods/goods.wxss
+++ b/pages/shop/goods/goods.wxss
@@ -266,3 +266,26 @@ swiper-item image {
 .b20{
   padding-bottom: 40rpx;
 }
+.tccs{
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color:rgba(0, 0, 0, .4);
+  top:0;
+  left: 0;
+  z-index:99999;
+}
+.csjs{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform:translate(-50%,-50%);
+  background-color: #fff;
+  padding:20rpx;
+  border-radius:20rpx;
+}
+.csjs view{
+  color: #666;
+  font-size: 26rpx;
+  line-height: 1.5em;
+}
