--- a/pages/my/indent/indent.wxml
+++ b/pages/my/indent/indent.wxml
@@ -2,22 +2,22 @@
 <view class="nav_tab">
   <scroll-view class="scroll" scroll-into-view="{{'s'+status}}" scroll-x>
    <view class="tab_box"> 
-      <view class="{{status==-1?'action':''}}" id="s-1" data-status="-1" bindtap="iscard">
+      <view class="{{status==-1?'action':''}}" id="s-1" data-status="-1" catchtap="iscard">
       全部
     </view>
-    <view class="{{status==0?'action':''}}" id="s0" data-status="0" bindtap="iscard">
+    <view class="{{status==0?'action':''}}" id="s0" data-status="0" catchtap="iscard">
       待付款
     </view>
-    <view class="{{status==10?'action':''}}" id="s10" data-status="10" bindtap="iscard">
+    <view class="{{status==10?'action':''}}" id="s10" data-status="10" catchtap="iscard">
       待发货
     </view>
-    <view class="{{status==20?'action':''}}" id="s20" data-status="20" bindtap="iscard">
+    <view class="{{status==20?'action':''}}" id="s20" data-status="20" catchtap="iscard">
       待收货
     </view>
-    <view class="{{status==30?'action':''}}" id="s30" data-status="30" bindtap="iscard">
+    <view class="{{status==30?'action':''}}" id="s30" data-status="30" catchtap="iscard">
       待评价
     </view>
-    <view class="{{status==50?'action':''}}" id="s50" data-status="50" bindtap="iscard">
+    <view class="{{status==50?'action':''}}" id="s50" data-status="50" catchtap="iscard">
       退款审核中
     </view>
    </view>
@@ -25,7 +25,7 @@
 </view>
 
 <view class="indent_box">
-  <view class="indent" bindtap="toPage" wx:for="{{list}}" wx:key="{{index}}"  data-id="{{item.order_id}}">
+  <view class="indent" catchtap ="toPage" wx:for="{{list}}" wx:key="{{index}}"  data-id="{{item.order_id}}">
     <view class="haoma">
       <view>订单编号：{{item.order_no}}</view>
     <view wx:if="{{item.status==0}}">待付款</view>
@@ -53,8 +53,8 @@
       </view>
       <view class="num_r jinse" wx:if="{{item.status==0||item.status==20||item.status==30}}">
         <view wx:if="{{item.status==0}}" catchtap="pay" data-id="{{item.order_id}}">立即支付</view>
-        <view wx:if="{{item.status==20}}" bindtap="affirm" data-order="{{item.order_id}}">确认收货</view>
-        <view wx:if="{{item.status==30}}" data-order="{{info.order_id}}" bindtap="discuss">立即评价</view>
+        <view wx:if="{{item.status==20}}" catchtap="affirm" data-order="{{item.order_id}}">确认收货</view>
+        <view wx:if="{{item.status==30}}" data-order="{{info.order_id}}" catchtap="discuss">立即评价</view>
       </view>
     </view>
   </view>
