--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -43,7 +43,7 @@
                 鉴定
             </view>
         </view>
-        <view bindtap="toPage" data-url="/pages/index/result/result?sort=10">
+        <view bindtap="toPage" data-url="/pages/index/result/result?is_credit=10">
             <view class="xuanze_img">
                 <image src="/images/home/shouye_shangxin@3x.png" />
             </view>
@@ -59,7 +59,8 @@
                 养护
             </view>
         </view>
-        <view bindtap="toPage" data-url='/pages/index/wxParse/index?api=Common/xcxfq'>
+        <!-- <view bindtap="toPage" data-url='/pages/index/wxParse/index?api=Common/xcxfq'> -->
+        <view bindtap="toPage" data-url="/pages/index/result/result?is_credit=1">
             <view class="xuanze_img">
                 <image src="/images/home/shouye_fenqi@3x.png" />
             </view>
