--- a/pages/my/index.wxss
+++ b/pages/my/index.wxss
@@ -79,6 +79,15 @@
   flex-direction: column;
   border-right: 1px solid #f2f2f2;
   height: 100%;
+  position: relative;
+}
+.set_box button {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
 }
 .apply_text,.set_text{
   padding-top: 22rpx;
