--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -17,9 +17,9 @@ view {
     position: absolute;
     width: 100%;
     height: 60rpx;
-    margin-top: 10rpx;
+    /* margin-top: 10rpx; */
     padding-left: 56rpx;
-    top: 0;
+    top: 25rpx;
     left: 0;
     z-index: 9;
     display: flex;
