--- a/pages/shop/goods/goods.wxml
+++ b/pages/shop/goods/goods.wxml
@@ -19,13 +19,14 @@
   <view class="title">
     <view class="title_h1">
       <text class="money"><text>￥</text>{{objs.price}}</text>
+    </view>
+    <view class="title_h1">
       <text class="zk" wx:if="{{objs.original_cost!=0}}">¥{{objs.original_cost}}</text>
       <text class="jj" bindtap="csjs">{{objs.quality_name}}</text>
       <text class="fq" wx:if="{{objs.is_credit==1}}">分期</text>
-
-    </view>
+    </view>   
     <view class="title_info">
-    {{objs.goods_title}}
+      <text class='b_name'>{{objs.brand_name}}</text>{{objs.goods_title}}
     </view>
   </view>
 
