--- a/pages/my/indent/indent.wxss
+++ b/pages/my/indent/indent.wxss
@@ -123,3 +123,21 @@ view {
   font-size: 26rpx;
   color: rgba(255, 255, 255, 1);
 }
+
+.null_img{
+  width: 255rpx;
+  height: 205rpx;
+  overflow: hidden;
+  margin: 0 auto;
+  margin-top: 150rpx;
+}
+.null_img image{
+  width: 100%;
+  height: 100%;
+}
+.null_text{
+  color: #666666;
+  font-size: 30rpx;
+  margin-top: 20rpx;
+  text-align: center;
+}
