fix:成色介紹後悔

--- a/pages/shop/goods/goods.wxml
+++ b/pages/shop/goods/goods.wxml
@@ -85,6 +85,7 @@
 
   <view wx:if="{{cs_show}}" class="tccs"> 
     <view class="csjs">
+      <view class="jj_title">成色介紹</view>
       <template is="wxParse"  data="{{wxParseData:cs_data.nodes}}"/>
       <view class="jinse" catchtap="csjsEnd" >我知道了</view>
     </view>
