--- a/pages/shop/goods/goods.wxss
+++ b/pages/shop/goods/goods.wxss
@@ -301,12 +301,13 @@ swiper-item image {
   /* top: 50%; */
   /* left: 50%; */
   /* margin: 0 50rpx; */
-  margin-top: 80rpx;
+  margin-top: 50rpx;
   /* transform:translate(-50%,-50%); */
   background-color: #fff;
   padding: 20rpx;
   border-radius: 20rpx;
   box-sizing: border-box;
+  padding-top: 40rpx;
 }
 
 .csjs view {
@@ -327,7 +328,16 @@ swiper-item image {
   font-size: 30rpx;
   line-height: 70rpx !important;
   text-align: center;
-  color: rgba(255, 255, 255, 1)!important;
+  color: rgba(255, 255, 255, 1) !important;
   overflow: hidden;
   margin-top: 60rpx;
+}
+
+.jj_title {
+  font-size: 30rpx;
+  font-family: PingFang-SC-Bold;
+  font-weight: bold;
+  color: rgba(51, 51, 51, 1);
+  text-align: center;
+  line-height: 80rpx! important;
 }
